# AIGraph4pg

./: .gitignore  404.html  README.md  backup.xml  index.html  mkdocs.yml  mkdocs_venv.ps1  mkdocs_venv.sh  sitemap.xml
python/: .dockerignore  Dockerfile  agefreighter_example.py  dev_gen_all.ps1  dev_main.py  dev_wrangle_legal_cases.ps1  dev_wrangle_legal_cases.py  docker-compose.yml  dotenv_example  main.py  pg.ps1  pg.sh  pg_dump.ps1  pg_dump.sh  pg_dump_schema.ps1  pg_dump_script.ps1  pyproject.toml  requirements-docker.txt  requirements.in  requirements.txt  set-env-vars-sample.ps1  tests.ps1  tests.sh  venv.ps1  venv.sh  webapp.ps1  webapp.py  webapp.sh
python/config/: sample_queries.txt
python/docker/: docker-compose.yml
python/sql/: legal_cases_ddl.sql  query_legal_cases.sql
python/src/models/: internal_models.py  webservice_models.py
python/src/services/: ai_completion.py  ai_conversation.py  ai_service.py  config_service.py  (+2 more)
python/templates/: create_cypher_case_citation_edge.txt  create_cypher_case_vertex.txt  cypher_gen_llm_prompt.txt  wrap_opencypher_in_age_sql.txt
python/tests/: test_config_service.py  test_query_result_parser.py  test_sample_queries.py  test_template.py
python/views/: architecture.html  cypher_console.html  home.html  layout.html  opencypher_gen.html  queries.html  queries_bak.html  tutorial_architecture.html  tutorial_cypher_gen_ai.html  tutorial_graph.html  tutorial_home.html  tutorial_info.html  tutorial_opencypher_gen.html  tutorial_pg_admin.html  tutorial_relational.html  tutorial_vector_search.html  vector_search.html
(+73 files in other folders)
